# High-Frequency-Limit-Order-Book-Analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  cd.yml  ci.yml
alembic/: env.py
configs/: backtest.yaml  exchanges.yaml  logging.yaml  settings.yaml
docs/: adapters.md  api_reference.md  architecture.md  backtesting.md  contributing.md  features.md  getting_started.md  index.md
infrastructure/otel/: otel-collector-config.yaml
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_market_impact.ipynb  04_signal_research.ipynb  05_backtest_analysis.ipynb  README.md
scripts/: download_data.py  export_features.py  generate_sample_data.py  run_ingestion.py  seed_db.py
src/lob_analyzer/: __init__.py
src/lob_analyzer/analytics/: __init__.py  market_impact.py  microstructure.py  order_flow.py  price_prediction.py  regime.py  reports.py  statistics.py
src/lob_analyzer/api/: dependencies.py  main.py  middleware.py
src/lob_analyzer/api/routers/: __init__.py  analytics.py  backtests.py  features.py  health.py  orderbook.py  signals.py
src/lob_analyzer/api/schemas/: analytics.py  common.py  features.py  orderbook.py  signals.py
src/lob_analyzer/backtesting/: __init__.py  engine.py  event.py  execution.py  metrics.py  portfolio.py  results.py  runner.py  simulator.py
src/lob_analyzer/cli/: main.py
src/lob_analyzer/features/: __init__.py  base.py  imbalance.py  liquidity.py  microprice.py  normalizer.py  pipeline.py  spread.py  store.py  trade_flow.py  volatility.py
src/lob_analyzer/ingestion/: __init__.py  base.py  normalizer.py  runner.py  validator.py
src/lob_analyzer/orderbook/: __init__.py  book.py  depth.py  level.py  models.py  registry.py  sequencer.py  snapshot.py  state.py  updater.py
src/lob_analyzer/signals/: __init__.py  base.py  composite.py  filter.py  generator.py  imbalance_signal.py  mean_reversion_signal.py  momentum_signal.py  registry.py  spread_signal.py
src/lob_analyzer/storage/: __init__.py  cache.py  database.py  parquet.py  timescale.py
src/lob_analyzer/utils/: config.py  decorators.py  logging.py  math.py  metrics.py  serialization.py  time.py  types.py  validation.py
src/lob_analyzer/visualization/: __init__.py
tests/: conftest.py
tests/benchmarks/: bench_features.py  bench_ingestion.py  bench_orderbook.py  bench_serialization.py
tests/e2e/: test_api_smoke.py  test_backtest_pipeline.py  test_live_pipeline.py
tests/fixtures/: sample_features.py  sample_snapshots.py  sample_ticks.py
tests/integration/: conftest.py
tests/integration/test_api/: test_feature_routes.py  test_orderbook_routes.py  test_websocket.py
tests/integration/test_ingestion/: test_adapters.py
tests/integration/test_storage/: test_cache.py  test_feature_repo.py  test_orderbook_repo.py  test_tick_repo.py
tests/unit/test_analytics/: test_market_impact.py  test_order_flow.py
tests/unit/test_backtesting/: test_engine.py  test_metrics.py  test_simulator.py
tests/unit/test_features/: test_imbalance.py  test_liquidity.py  test_microprice.py  test_pipeline.py  test_spread.py
tests/unit/test_ingestion/: test_normalizer.py  test_validator.py
tests/unit/test_orderbook/: test_book.py  test_sequencer.py  test_snapshot.py  test_updater.py
tests/unit/test_signals/: test_filter.py  test_generator.py
tests/unit/test_utils/: test_math.py  test_time.py
(+41 files in other folders)
