[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hf-lob-analyzer"
version = "0.1.0"
description = "High-Frequency Limit Order Book Analyzer for real-time market microstructure analysis"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["hft", "limit-order-book", "market-microstructure", "quantitative-finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "websockets>=12.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "hiredis>=2.3.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.7",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "tenacity>=8.2.3",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-exporter-otlp>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.98.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "black>=24.3.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.1.0",
]
viz = [
    "plotly>=5.20.0",
    "dash>=2.16.0",
    "dash-bootstrap-components>=1.5.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "bokeh>=3.4.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "statsmodels>=0.14.1",
]
all = [
    "hf-lob-analyzer[dev,viz,ml]",
]

[project.scripts]
lob-analyzer = "lob_analyzer.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourname/hf-lob-analyzer"
Repository = "https://github.com/yourname/hf-lob-analyzer"
Issues = "https://github.com/yourname/hf-lob-analyzer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lob_analyzer"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT", "RUF"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]
"scripts/**" = ["ANN", "S"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
cov_report = "term-missing"
addopts = [
    "--strict-markers",
    "-ra",
    "--tb=short",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "e2e: end-to-end tests",
    "slow: tests taking more than 1 second",
    "benchmark: performance benchmark tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]
